# water54

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: branching-workflow.yaml  loop-workflow.yaml  parallel-workflow.yaml  scaffold-blueprint.yaml
src/agent_workflow/: cli.py  engine.py  models.py  providers.py  scaffold.py  templating.py
src/codex_workflow_automation/: cli.py  engine.py  models.py  scaffold.py
templates/workflow-template/: README.md  control.yaml  workflow.yaml
templates/workflow-template/examples/: sample-run-notes.md
templates/workflow-template/memory/: agent-a.md  agent-b.md
templates/workflow-template/prompts/: agent-a.md  agent-b.md
templates/workflow-template/schemas/: agent-a-output.json  agent-b-output.json
templates/workflow-template/shared/: handoff.md
tests/: fake_claude.py  fake_codex.py  test_engine.py  test_providers.py  test_scaffold.py
