[project]
name = "codex-workflow-automation"
version = "0.1.0"
description = "YAML-driven Codex workflow orchestrator with branching and JSON step outputs"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
codex-workflow = "codex_workflow_automation.cli:main"
