[project]
name = "agent-workflow"
version = "0.1.0"
description = "YAML-driven agent workflow orchestrator with branching and JSON step outputs"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
agent-workflow = "agent_workflow.cli:main"
